# RRGPy

./: .gitignore  Dockerfile  README.md  docker_build_and_run.sh  pyproject.toml  requirements.txt  streamlit_runs.sh
app/: main.py
app/components/: quadrant_colors.py  rrg_plot.py  rrg_table.py
app/data/: finance.py  velocity.py
tests/: test_finance.py
